// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Steps Block branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "branches": "!release/* master stable/*",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block branches json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "branches": "!release/* master stable/*",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block branches json_depends_on_accept_all 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "branches": "!release/* master stable/*",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block branches structure 1`] = `"* [block for 'my title']"`;

exports[`buildkite-graph Steps Block branches yaml 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    block: my title
"
`;

exports[`buildkite-graph Steps Block branches yaml_depends_on 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    key: _0
    block: my title
"
`;

exports[`buildkite-graph Steps Block branches yaml_depends_on_accept_all 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    key: _0
    block: my title
"
`;

exports[`buildkite-graph Steps Block branches yaml_mutate 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    key: _0
    block: my title
"
`;

exports[`buildkite-graph Steps Block can be added dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for ':rocket: Release!']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block can be added dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for ':rocket: Release!']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block can be added json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json 2`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "prompt": "Release to production?",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "key": "_1",
      "prompt": "Release to production?",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json_depends_on_accept_all 1`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json_depends_on_accept_all 2`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "key": "_1",
      "prompt": "Release to production?",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added structure 1`] = `"* [block for ':rocket: Release!']"`;

exports[`buildkite-graph Steps Block can be added structure 2`] = `"* [block for ':rocket: Release!']"`;

exports[`buildkite-graph Steps Block can be added yaml 1`] = `
"steps:
  - block: ':rocket: Release!'
"
`;

exports[`buildkite-graph Steps Block can be added yaml 2`] = `
"steps:
  - block: ':rocket: Release!'
    prompt: Release to production?
"
`;

exports[`buildkite-graph Steps Block can be added yaml_depends_on 1`] = `
"steps:
  - key: _0
    block: ':rocket: Release!'
"
`;

exports[`buildkite-graph Steps Block can be added yaml_depends_on 2`] = `
"steps:
  - key: _1
    block: ':rocket: Release!'
    prompt: Release to production?
"
`;

exports[`buildkite-graph Steps Block can be added yaml_depends_on_accept_all 1`] = `
"steps:
  - key: _0
    block: ':rocket: Release!'
"
`;

exports[`buildkite-graph Steps Block can be added yaml_depends_on_accept_all 2`] = `
"steps:
  - key: _1
    block: ':rocket: Release!'
    prompt: Release to production?
"
`;

exports[`buildkite-graph Steps Block can be added yaml_mutate 1`] = `
"steps:
  - key: _0
    block: ':rocket: Release!'
"
`;

exports[`buildkite-graph Steps Block can be added yaml_mutate 2`] = `
"steps:
  - key: _1
    block: ':rocket: Release!'
    prompt: Release to production?
"
`;

exports[`buildkite-graph Steps Block with fields dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "key": "field-1",
          "text": "Label 1",
        },
        Object {
          "key": "field-2",
          "options": Array [],
          "select": "Label 2",
        },
        Object {
          "key": "field-3",
          "text": "Label 3",
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 2`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "Flying Dolphin",
          "hint": "What’s the code name for this release? :name_badge:",
          "key": "release-name",
          "required": false,
          "text": "Code Name",
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 3`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "beta",
          "hint": "What’s the release stream?",
          "key": "release-stream",
          "options": Array [
            Object {
              "label": "Beta",
              "value": "beta",
            },
            Object {
              "label": "Stable",
              "value": "stable",
            },
          ],
          "required": false,
          "select": "Stream",
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 4`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": Array [
            "na",
            "eur",
            "asia",
            "aunz",
          ],
          "hint": "Which regions should we deploy this to? :earth_asia:",
          "key": "regions",
          "multiple": true,
          "options": Array [
            Object {
              "label": "North America",
              "value": "na",
            },
            Object {
              "label": "Europe",
              "value": "eur",
            },
            Object {
              "label": "Asia",
              "value": "asia",
            },
            Object {
              "label": "Oceania",
              "value": "aunz",
            },
          ],
          "select": "Regions",
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "key": "field-1",
          "text": "Label 1",
        },
        Object {
          "key": "field-2",
          "options": Array [],
          "select": "Label 2",
        },
        Object {
          "key": "field-3",
          "text": "Label 3",
        },
      ],
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "Flying Dolphin",
          "hint": "What’s the code name for this release? :name_badge:",
          "key": "release-name",
          "required": false,
          "text": "Code Name",
        },
      ],
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "beta",
          "hint": "What’s the release stream?",
          "key": "release-stream",
          "options": Array [
            Object {
              "label": "Beta",
              "value": "beta",
            },
            Object {
              "label": "Stable",
              "value": "stable",
            },
          ],
          "required": false,
          "select": "Stream",
        },
      ],
      "key": "_2",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on 4`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": Array [
            "na",
            "eur",
            "asia",
            "aunz",
          ],
          "hint": "Which regions should we deploy this to? :earth_asia:",
          "key": "regions",
          "multiple": true,
          "options": Array [
            Object {
              "label": "North America",
              "value": "na",
            },
            Object {
              "label": "Europe",
              "value": "eur",
            },
            Object {
              "label": "Asia",
              "value": "asia",
            },
            Object {
              "label": "Oceania",
              "value": "aunz",
            },
          ],
          "select": "Regions",
        },
      ],
      "key": "_3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on_accept_all 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "key": "field-1",
          "text": "Label 1",
        },
        Object {
          "key": "field-2",
          "options": Array [],
          "select": "Label 2",
        },
        Object {
          "key": "field-3",
          "text": "Label 3",
        },
      ],
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on_accept_all 2`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "Flying Dolphin",
          "hint": "What’s the code name for this release? :name_badge:",
          "key": "release-name",
          "required": false,
          "text": "Code Name",
        },
      ],
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on_accept_all 3`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "beta",
          "hint": "What’s the release stream?",
          "key": "release-stream",
          "options": Array [
            Object {
              "label": "Beta",
              "value": "beta",
            },
            Object {
              "label": "Stable",
              "value": "stable",
            },
          ],
          "required": false,
          "select": "Stream",
        },
      ],
      "key": "_2",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json_depends_on_accept_all 4`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": Array [
            "na",
            "eur",
            "asia",
            "aunz",
          ],
          "hint": "Which regions should we deploy this to? :earth_asia:",
          "key": "regions",
          "multiple": true,
          "options": Array [
            Object {
              "label": "North America",
              "value": "na",
            },
            Object {
              "label": "Europe",
              "value": "eur",
            },
            Object {
              "label": "Asia",
              "value": "asia",
            },
            Object {
              "label": "Oceania",
              "value": "aunz",
            },
          ],
          "select": "Regions",
        },
      ],
      "key": "_3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields structure 1`] = `"* [block for 'my title']"`;

exports[`buildkite-graph Steps Block with fields structure 2`] = `"* [block for 'my title']"`;

exports[`buildkite-graph Steps Block with fields structure 3`] = `"* [block for 'my title']"`;

exports[`buildkite-graph Steps Block with fields structure 4`] = `"* [block for 'my title']"`;

exports[`buildkite-graph Steps Block with fields yaml 1`] = `
"steps:
  - block: my title
    fields:
      - key: field-1
        text: Label 1
      - key: field-2
        options: []
        select: Label 2
      - key: field-3
        text: Label 3
"
`;

exports[`buildkite-graph Steps Block with fields yaml 2`] = `
"steps:
  - block: my title
    fields:
      - key: release-name
        hint: 'What’s the code name for this release? :name_badge:'
        required: false
        text: Code Name
        default: Flying Dolphin
"
`;

exports[`buildkite-graph Steps Block with fields yaml 3`] = `
"steps:
  - block: my title
    fields:
      - key: release-stream
        hint: What’s the release stream?
        required: false
        options:
          - label: Beta
            value: beta
          - label: Stable
            value: stable
        select: Stream
        default: beta
"
`;

exports[`buildkite-graph Steps Block with fields yaml 4`] = `
"steps:
  - block: my title
    fields:
      - key: regions
        hint: 'Which regions should we deploy this to? :earth_asia:'
        options:
          - label: North America
            value: na
          - label: Europe
            value: eur
          - label: Asia
            value: asia
          - label: Oceania
            value: aunz
        select: Regions
        default:
          - na
          - eur
          - asia
          - aunz
        multiple: true
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on 1`] = `
"steps:
  - key: _0
    block: my title
    fields:
      - key: field-1
        text: Label 1
      - key: field-2
        options: []
        select: Label 2
      - key: field-3
        text: Label 3
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on 2`] = `
"steps:
  - key: _1
    block: my title
    fields:
      - key: release-name
        hint: 'What’s the code name for this release? :name_badge:'
        required: false
        text: Code Name
        default: Flying Dolphin
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on 3`] = `
"steps:
  - key: _2
    block: my title
    fields:
      - key: release-stream
        hint: What’s the release stream?
        required: false
        options:
          - label: Beta
            value: beta
          - label: Stable
            value: stable
        select: Stream
        default: beta
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on 4`] = `
"steps:
  - key: _3
    block: my title
    fields:
      - key: regions
        hint: 'Which regions should we deploy this to? :earth_asia:'
        options:
          - label: North America
            value: na
          - label: Europe
            value: eur
          - label: Asia
            value: asia
          - label: Oceania
            value: aunz
        select: Regions
        default:
          - na
          - eur
          - asia
          - aunz
        multiple: true
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on_accept_all 1`] = `
"steps:
  - key: _0
    block: my title
    fields:
      - key: field-1
        text: Label 1
      - key: field-2
        options: []
        select: Label 2
      - key: field-3
        text: Label 3
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on_accept_all 2`] = `
"steps:
  - key: _1
    block: my title
    fields:
      - key: release-name
        hint: 'What’s the code name for this release? :name_badge:'
        required: false
        text: Code Name
        default: Flying Dolphin
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on_accept_all 3`] = `
"steps:
  - key: _2
    block: my title
    fields:
      - key: release-stream
        hint: What’s the release stream?
        required: false
        options:
          - label: Beta
            value: beta
          - label: Stable
            value: stable
        select: Stream
        default: beta
"
`;

exports[`buildkite-graph Steps Block with fields yaml_depends_on_accept_all 4`] = `
"steps:
  - key: _3
    block: my title
    fields:
      - key: regions
        hint: 'Which regions should we deploy this to? :earth_asia:'
        options:
          - label: North America
            value: na
          - label: Europe
            value: eur
          - label: Asia
            value: asia
          - label: Oceania
            value: aunz
        select: Regions
        default:
          - na
          - eur
          - asia
          - aunz
        multiple: true
"
`;

exports[`buildkite-graph Steps Block with fields yaml_mutate 1`] = `
"steps:
  - key: _0
    block: my title
    fields:
      - key: field-1
        text: Label 1
      - key: field-2
        options: []
        select: Label 2
      - key: field-3
        text: Label 3
"
`;

exports[`buildkite-graph Steps Block with fields yaml_mutate 2`] = `
"steps:
  - key: _1
    block: my title
    fields:
      - key: release-name
        hint: 'What’s the code name for this release? :name_badge:'
        required: false
        text: Code Name
        default: Flying Dolphin
"
`;

exports[`buildkite-graph Steps Block with fields yaml_mutate 3`] = `
"steps:
  - key: _2
    block: my title
    fields:
      - key: release-stream
        hint: What’s the release stream?
        required: false
        options:
          - label: Beta
            value: beta
          - label: Stable
            value: stable
        select: Stream
        default: beta
"
`;

exports[`buildkite-graph Steps Block with fields yaml_mutate 4`] = `
"steps:
  - key: _3
    block: my title
    fields:
      - key: regions
        hint: 'Which regions should we deploy this to? :earth_asia:'
        options:
          - label: North America
            value: na
          - label: Europe
            value: eur
          - label: Asia
            value: asia
          - label: Oceania
            value: aunz
        select: Regions
        default:
          - na
          - eur
          - asia
          - aunz
        multiple: true
"
`;
